--- a/jaimewebdev.com/sass/main.scss
+++ b/jaimewebdev.com/sass/main.scss
@@ -1,6 +1,9 @@
+@import "animations";
+
 @import "variables";
 @import "base";
 @import "mixins";
+
 @import "about";
 @import "components";
 @import "header";
