--- a/jaimewebdev.com/sass/_contact.scss
+++ b/jaimewebdev.com/sass/_contact.scss
@@ -1,4 +1,5 @@
 .section__contact {
+    position: relative;
     padding: 2rem 0 8rem 0;
     background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg2-min.jpg);
     background-size: cover;
