--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -1,15 +1,15 @@
 .header {
   // @include background;
   // @include bgSettings;
-  position: relative;
-
   background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
   position: relative;
+  widows: auto;
   height: 100vh;
+  overflow: hidden;
   z-index: 4;
 
   @media only screen and (max-width: $bp-small) {
