--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -420,14 +420,15 @@ a {
     transition: all .3s ease-out; }
 
 .header {
-  position: relative;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
   position: relative;
+  widows: auto;
   height: 100vh;
+  overflow: hidden;
   z-index: 4; }
   @media only screen and (max-width: 37.5em) {
     .header {
@@ -611,15 +612,20 @@ button.scroll_down:before {
   transition-delay: 0.5s; }
 
 #projects {
-  background-image: url(../img/Author_BG.jpg);
+  position: relative;
+  background-image: url(../img/Author_BG-min.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
+  overflow: hidden;
   padding-bottom: 4rem; }
   @media only screen and (max-width: 43.57em) {
     #projects {
       padding-bottom: 2rem; } }
+  @media only screen and (max-width: 37.5em) {
+    #projects {
+      background-image: url(../img/Author_BG-mobile.jpg); } }
   @media only screen and (max-width: 23.43em) {
     #projects {
       padding-bottom: 2rem; } }
