--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -1,14 +1,21 @@
 #projects {
-    background-image: url(../img/Author_BG.jpg);
+    position: relative;
+    background-image: url(../img/Author_BG-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
+    overflow: hidden;
     // @include projectsBg;
     padding-bottom: 4rem;
 
     @media only screen and (max-width: $bp-medium2) {
         padding-bottom: 2rem;
+    }
+
+
+    @media only screen and (max-width: $bp-small) {
+        background-image: url(../img/Author_BG-mobile.jpg);
     }
 
     @media only screen and (max-width: $bp-smaller2) {
