--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -420,19 +420,18 @@ a {
     transition: all .3s ease-out; }
 
 .header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background.jpg);
-  background-size: cover;
+  background-image: url(../img/background.jpg);
+  background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center;
   position: relative;
-  widows: auto;
   height: 100vh;
-  overflow: hidden;
   z-index: 4; }
   @media only screen and (max-width: 37.5em) {
     .header {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background-mobile.jpg);
+      background-image: url(../img/background.jpg);
+      background-position: center right;
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
