--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -1,29 +1,32 @@
 .header {
   // @include background;
   // @include bgSettings;
-  // background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background.jpg);
-  background-image: url(../img/background.jpg);
-  background-size: 100%;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/canyon.jpg);
+  // background-image: url(../img/background.jpg);
+  background-size: cover;
+  // background-repeat: no-repeat;
+  // background-attachment: fixed;
   background-position: center center;
   position: relative;
   height: 100vh;
-  // overflow: hidden;
   z-index: 4;
 
-  @media only screen and (max-width: $bp-small) {
-    // background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background-mobile.jpg);
-    background-image: url(../img/background.jpg);
-    background-position: center right;
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+  only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+  only screen and (min-width: 125em) {
+      background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ),url(../img/canyon-1-small.jpg);
+  }
 
+  
+//   @media only screen and (max-width: $bp-small) {
+//     // background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background-mobile.jpg);
+//     background-image: url(../img/background.jpg);
+//     background-position: center right;
 
+//     // @include bgMobile;
+//     @include bgSettings;
 
-
-    // @include bgMobile;
-    @include bgSettings;
-
-}
+// }
 
   // @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
   // only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
