--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -2,10 +2,10 @@
     position: relative;
     background-image: url(../img/Author_BG-min.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    // background-repeat: no-repeat;
+    // background-attachment: fixed;
     background-position: center center;
-    overflow: hidden;
+    // overflow: hidden;
     // @include projectsBg;
     padding-bottom: 4rem;
 
