--- a/jaimewebdev.com/sass/_contact.scss
+++ b/jaimewebdev.com/sass/_contact.scss
@@ -3,11 +3,17 @@
     padding: 2rem 0 8rem 0;
     background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg2-min.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
+    // background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
     // @include bgContact;
     // @include bgSettings;
+
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
+        background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ),url(../img/bg2-mobile.jpg);
+    }
 
   
     @media only screen and (max-width: $bp-medium2) {
