--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -3,11 +3,17 @@
     background-image: url(../img/Author_BG-min.jpg);
     background-size: cover;
     // background-repeat: no-repeat;
-    // background-attachment: fixed;
+    background-attachment: fixed;
     background-position: center center;
     // overflow: hidden;
     // @include projectsBg;
     padding-bottom: 4rem;
+
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
+    only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    only screen and (min-width: 125em) {
+        background-image:url(../img/Author_BG-mobile.jpg);
+    }
 
     @media only screen and (max-width: $bp-medium2) {
         padding-bottom: 2rem;
