--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -422,6 +422,7 @@ a {
 .header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/canyon.jpg);
   background-size: cover;
+  background-attachment: fixed;
   background-position: center center;
   position: relative;
   height: 100vh;
@@ -606,8 +607,12 @@ button.scroll_down:before {
   position: relative;
   background-image: url(../img/Author_BG-min.jpg);
   background-size: cover;
+  background-attachment: fixed;
   background-position: center center;
   padding-bottom: 4rem; }
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
+    #projects {
+      background-image: url(../img/Author_BG-mobile.jpg); } }
   @media only screen and (max-width: 43.57em) {
     #projects {
       padding-bottom: 2rem; } }
@@ -953,9 +958,11 @@ button.scroll_down:before {
   padding: 2rem 0 8rem 0;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2-min.jpg);
   background-size: cover;
-  background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center center; }
+  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
+    .section__contact {
+      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2-mobile.jpg); } }
   @media only screen and (max-width: 43.57em) {
     .section__contact {
       padding: 0 0 5rem 0; } }
