--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -5,7 +5,7 @@
   // background-image: url(../img/background.jpg);
   background-size: cover;
   // background-repeat: no-repeat;
-  // background-attachment: fixed;
+  background-attachment: fixed;
   background-position: center center;
   position: relative;
   height: 100vh;
