--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -13,6 +13,8 @@
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
     only screen and (min-width: 125em) {
         background-image:url(../img/Author_BG-mobile.jpg);
+        background-attachment: none;
+
     }
 
     @media only screen and (max-width: $bp-medium2) {
