testing responsive img

--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -420,17 +420,15 @@ a {
     transition: all .3s ease-out; }
 
 .header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/canyon.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg-header.jpg);
   background-size: cover;
-  background-attachment: fixed;
   background-position: center center;
   position: relative;
   height: 100vh;
   z-index: 4; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/canyon-1-small.jpg);
-      background-attachment: none; } }
+      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg-header-small.jpg); } }
 
 .main-heading {
   position: relative;
@@ -606,21 +604,16 @@ button.scroll_down:before {
 
 #projects {
   position: relative;
-  background-image: url(../img/Author_BG-min.jpg);
+  background-image: url(../img/projects-bg.jpg);
   background-size: cover;
-  background-attachment: fixed;
   background-position: center center;
   padding-bottom: 4rem; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     #projects {
-      background-image: url(../img/Author_BG-mobile.jpg);
-      background-attachment: none; } }
+      background-image: url(../img/projects-bg-small.jpg); } }
   @media only screen and (max-width: 43.57em) {
     #projects {
       padding-bottom: 2rem; } }
-  @media only screen and (max-width: 37.5em) {
-    #projects {
-      background-image: url(../img/Author_BG-mobile.jpg); } }
   @media only screen and (max-width: 23.43em) {
     #projects {
       padding-bottom: 2rem; } }
@@ -958,24 +951,15 @@ button.scroll_down:before {
 .section__contact {
   position: relative;
   padding: 2rem 0 8rem 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2-min.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg-contact.jpg);
   background-size: cover;
-  background-attachment: fixed;
   background-position: center center; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .section__contact {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2-mobile.jpg);
-      background-attachment: none; } }
+      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg-contact-small.jpg); } }
   @media only screen and (max-width: 43.57em) {
     .section__contact {
       padding: 0 0 5rem 0; } }
-  @media only screen and (max-width: 37.5em) {
-    .section__contact {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/bg2-mobile.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center center; } }
 
 .form__group {
   display: flex;
