--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -3,7 +3,7 @@
     background-image: url(../img/projects-bg.jpg);
     background-size: cover;
     // background-repeat: no-repeat;
-    // background-attachment: fixed;
+    background-attachment: fixed;
     background-position: center center;
     // overflow: hidden;
     // @include projectsBg;
