--- a/jaimewebdev.com/sass/_contact.scss
+++ b/jaimewebdev.com/sass/_contact.scss
@@ -1,7 +1,7 @@
 .section__contact {
     position: relative;
     padding: 2rem 0 8rem 0;
-    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg-contact.jpg);
+    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg-header.jpg);
     background-size: cover;
     // background-repeat: no-repeat;
     // background-attachment: fixed;
@@ -12,7 +12,7 @@
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
     only screen and (min-width: 125em) {
-        background-image: linear-gradient(rgba($bg-overlay, .4), rgba($bg-overlay, .4), ),url(../img/bg-contact-small.jpg);
+        background-image: linear-gradient(rgba($bg-overlay, .4), rgba($bg-overlay, .4), ),url(../img/bg-header-small.jpg);
 
     }
 
