--- a/jaimewebdev.com/sass/_footer.scss
+++ b/jaimewebdev.com/sass/_footer.scss
@@ -1,4 +1,6 @@
 .footer {
+    // background-image: linear-gradient(rgba($color-terceary-dark, .9), rgba($color-terceary-dark, .9), ), url(../img/bg-contact.jpg);
+    // @include bgSettings;
     background-color: rgba(33,42,56,.93);
     padding: 5rem 0 1rem 0;
     color: $color-white;
