--- a/jaimewebdev.com/css/style.css
+++ b/jaimewebdev.com/css/style.css
@@ -316,7 +316,8 @@ a {
         height: 95vh; } }
     @media only screen and (max-width: 23.43em) {
       .popup__content {
-        width: 95%; } }
+        width: 100%;
+        height: 95vh; } }
   .popup__right {
     width: 34%;
     height: auto;
@@ -342,7 +343,7 @@ a {
         margin-top: 28rem; } }
     @media only screen and (max-width: 23.43em) {
       .popup__right {
-        margin-top: 0; } }
+        margin-top: -3rem; } }
   .popup__img {
     position: absolute;
     top: 10%;
@@ -368,6 +369,11 @@ a {
       .popup__img {
         width: 93%;
         top: 9%; } }
+    @media only screen and (max-width: 23.43em) {
+      .popup__img {
+        width: 85%;
+        top: 10%;
+        left: 8%; } }
   .popup__text {
     font-family: "Raleway", sans-serif;
     font-size: 1.3rem;
@@ -412,6 +418,10 @@ a {
   @media only screen and (max-width: 75em) {
     .btn-popup {
       margin-right: 0; } }
+  @media only screen and (max-width: 23.43em) {
+    .btn-popup {
+      display: flex;
+      margin-bottom: 1rem; } }
   .btn-popup:hover {
     color: #444;
     background: #fff;
@@ -423,13 +433,14 @@ a {
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center right;
   position: relative;
   height: 100vh;
   z-index: 4; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .header {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background-small.jpg); } }
+      background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background-small.jpg);
+      background-attachment: fixed; } }
 
 .main-heading {
   position: relative;
@@ -917,12 +928,12 @@ button.scroll_down:before {
   color: #fff; }
 
 .popup-heading {
-  font-size: 1em;
+  font-size: 1.3em;
   font-weight: 700;
   letter-spacing: 3px;
   line-height: 1.2em;
   text-transform: uppercase;
-  margin-bottom: .8rem;
+  margin-bottom: 5px;
   font-family: "Raleway", sans-serif;
   color: #00ADDA; }
   @media only screen and (max-width: 23.43em) {
@@ -958,7 +969,8 @@ button.scroll_down:before {
   background-position: center center; }
   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
     .section__contact {
-      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg-header-small.jpg); } }
+      background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../img/bg-header-small.jpg);
+      background-attachment: fixed; } }
   @media only screen and (max-width: 43.57em) {
     .section__contact {
       padding: 0 0 5rem 0; } }
