--- a/jaimewebdev.com/sass/_components.scss
+++ b/jaimewebdev.com/sass/_components.scss
@@ -286,7 +286,9 @@
         }
 
         @media only screen and (max-width: $bp-smaller2) {
-            width: 95%;  
+            width: 100%;
+            height: 95vh;  
+
         }
     }
 
@@ -324,7 +326,7 @@
          }
 
          @media only screen and (max-width: $bp-smaller2) {
-            margin-top: 0;   
+            margin-top: -3rem;   
          }
 
     }
@@ -358,6 +360,12 @@
         @media only screen and (max-width: $bp-smaller) {
             width: 93%;
             top: 9%    
+         }
+
+         @media only screen and (max-width: $bp-smaller2) {
+            width: 85%;
+            top: 10%;  
+            left: 8%;  
          }
     }
 
@@ -427,6 +435,12 @@
     @media only screen and (max-width: $bp-larger) {
         margin-right: 0;  
     }
+
+    @media only screen and (max-width: $bp-smaller2) {
+        display: flex;
+        margin-bottom: 1rem;
+
+     }
 
     &:hover {
         color: $color-primary;
