--- a/jaimewebdev.com/sass/_header.scss
+++ b/jaimewebdev.com/sass/_header.scss
@@ -6,7 +6,7 @@
   background-size: cover ;
   background-repeat:no-repeat;
   // background-attachment: fixed;
-  background-position:  center center;
+  background-position:  center right;
   position: relative;
   height: 100vh;
   z-index: 4;
@@ -15,7 +15,9 @@
   only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
   only screen and (min-width: 125em) {
       // background-image: linear-gradient(rgba($bg-overlay, 9), rgba($bg-overlay, .7), ),url(../img/jr.jpg);
-      background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background-small.jpg);
+      background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7),), url(../img/background-small.jpg);
+      background-attachment: fixed;
+
 
   }
 
