--- a/jaimewebdev.com/sass/_typography.scss
+++ b/jaimewebdev.com/sass/_typography.scss
@@ -146,12 +146,12 @@
 }
 
 .popup-heading {
-  font-size: 1em;
+  font-size: 1.3em;
   font-weight: 700;
   letter-spacing: 3px;
   line-height: 1.2em;
   text-transform: uppercase;
-  margin-bottom: .8rem;
+  margin-bottom: 5px;
   font-family: $font-primary;
   color: $color-secondary;
 
