--- a/jaimewebdev.com/sass/_variables.scss
+++ b/jaimewebdev.com/sass/_variables.scss
@@ -42,7 +42,8 @@ $field-color:#E8E9EA;
 // ===== BACKGROUNDS =====
 // $show-bg-img: true;
 // $bg-img: url(../img/background.jpg);
-// $bg-projects: url(https://raw.githubusercontent.com/yagoestevez/fcc-portfolio/master/src/Images/Stars.svg?sanitize=true);
+// $bg-projects-mobile: url(https://raw.githubusercontent.com/yagoestevez/fcc-portfolio/master/src/Images/Stars.svg?sanitize=true);
+$bg-projects-mobile: url(../img/bg-projects2-small.jpg);
 $bg-projects: url(../img/Author_BG.jpg);
 
 
