--- a/jaimewebdev.com/sass/_about.scss
+++ b/jaimewebdev.com/sass/_about.scss
@@ -61,6 +61,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 5rem;
+
 
         @media only screen and (max-width: $bp-small) {
             width: 100%;
@@ -77,7 +79,8 @@
 
         span {
             color: $color-secondary;
-            font-size: 6rem;
+            // font-size: 6rem;
+            font-size: 5rem;
             font-weight: 700;
 
             @media only screen and (max-width: $bp-small) {
