--- a/jaimewebdev.com/sass/_mixins.scss
+++ b/jaimewebdev.com/sass/_mixins.scss
@@ -39,17 +39,17 @@
 // }
 
 @mixin bgMobile {
-    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/background-small.jpg);
+    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7)), url(../img/background-small.jpg);
 
 }
 
 @mixin bgContact {
-    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg2-min.jpg);
+    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7)), url(../img/bg2-min.jpg);
 
 }
 
 @mixin bgContact-mobile {
-    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7), ), url(../img/bg2-mobile.jpg);
+    background-image: linear-gradient(rgba($bg-overlay, .7), rgba($bg-overlay, .7)), url(../img/bg2-mobile.jpg);
 
 }
 
@@ -57,6 +57,13 @@
     background-image: linear-gradient(rgba($color-terceary-dark, .2), rgba($color-terceary-dark, .2)), $bg-projects;
     @include bgSettings;
 }
+
+@mixin projectsBg-mobile {
+    background-image: linear-gradient(rgba($color-terceary-dark, .2), rgba($color-terceary-dark, .2)), $bg-projects-mobile;
+    @include bgSettings;
+}
+
+
 
 @mixin lenearGradient {
     background: linear-gradient(to right,
