--- a/jaimewebdev.com/sass/_projects.scss
+++ b/jaimewebdev.com/sass/_projects.scss
@@ -1,18 +1,18 @@
 #projects {
     position: relative;
-    background-image: url(../img/projects-bg.jpg);
+    // background-image: url(../img/projects-bg.jpg);
     background-size: cover;
     // background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center center;
     // overflow: hidden;
-    // @include projectsBg;
+    @include projectsBg-mobile;
     padding-bottom: 4rem;
 
     @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
     only screen and (min-width: 125em) {
-        background-image:url(../img/projects-bg-small.jpg);
+        background-image: linear-gradient(rgba($color-terceary, .6), rgba($color-terceary, .6)), url(../img/bg-projects2.jpg);
 
     }
 
